# template-forge

./: .gitignore
.tasks/backup.tools/: README.md  _run_ci.sh  _run_ctx_init.sh  _tool_config.yaml  _tool_index.md  create_execution_log.sh  create_task.sh  run_ci_then_sign_off.sh  task_sign_off.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.azure.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  uv.toml
backend/app/: config.py  error_handlers.py  exceptions.py  main.py  middleware.py
backend/app/dependencies/: __init__.py  auth.py  telemetry.py
backend/app/routes/: __init__.py  generate_router.py  health_router.py  stream_router.py  test_router.py
backend/app/schemas/: __init__.py  auth_schema.py  common_schema.py  generate_schema.py
backend/app/services/: __init__.py  document_processor.py
backend/app/utils/: __init__.py  file_validation.py  logging.py
backend/tests/: conftest.py  test_api_integration.py  test_auth.py  test_error_handling.py  test_generate.py  test_health.py  test_sse_streaming.py  test_stream.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
infra/: .gitignore  README.md  bicepconfig.json  main.bicep  ps-rule.yaml  resources.bicep
infra/.ps-rule/: README.md  Rule.Rule.ps1
infra/environments/: main.dev.bicepparam  main.prod.bicepparam
infra/modules/: abbreviations.json  monitoring.bicep  rbac.bicep  storage.bicep
infra/scripts/: deploy-example.ps1  deploy-example.sh  validate-params.ps1  validate-params.sh
(+51 files in other folders)
